--- a/client-deployment.yaml
+++ b/client-deployment.yaml
@@ -17,3 +17,16 @@ spec:
           image: maximolds/bantay_data_webapp_client:v1
           ports:
             - containerPort: 5173
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client-loadbalancer
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80  # External port
+      targetPort: 5173  # Container port for the client
+  selector:
+    component: web
+
